Fix: Emotes getting slightly clipped due to overflow Fix: Being able to click sub emotes in chat of current channel when not subbed Fix: Slightly improved new messages showing out of view Style: Quick emote holder emotes are now same size as in chat

--- a/assets/SCSS/_emotes.scss
+++ b/assets/SCSS/_emotes.scss
@@ -2,8 +2,6 @@
 @use 'mixins' as *;
 @use 'sass:math';
 
-$chat_emote_size: 2.3em;
-
 .ntv__emote {
 	content-visibility: auto;
 	display: inline-block;
@@ -27,8 +25,8 @@ $chat_emote_size: 2.3em;
 	background: rgba(255, 255, 255, 0.034);
 
 	vertical-align: middle;
+	display: inline-flex;
 	position: relative;
-	display: inline-grid;
 	cursor: pointer;
 	// padding: 0.2em;
 
@@ -50,10 +48,7 @@ $chat_emote_size: 2.3em;
 
 	&:hover {
 		background: hsla(0, 0%, 50%, 0.2);
-
-		.ntv__emote {
-			scale: 110%;
-		}
+		scale: 102%;
 	}
 
 	&--zero-width {
@@ -105,8 +100,7 @@ $chat_emote_size: 2.3em;
 	vertical-align: middle;
 	display: inline-grid;
 	object-fit: contain;
-	// margin: -0.18em 0;
-	margin: -0.35em 0;
+	margin: -5px 0;
 
 	justify-content: center;
 	align-items: center;
