--- a/assets/SCSS/platforms/kick/_messages.scss
+++ b/assets/SCSS/platforms/kick/_messages.scss
@@ -12,6 +12,10 @@
 // 	}
 // }
 
+#chatroom-messages > .no-scrollbar > div {
+	min-height: 32px;
+}
+
 .ntv__chat-message {
 	.kick__chat-message__actions {
 		display: none;
